monitoring/order_grafana_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: monitoring

spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      # docker container 
      containers:
        - name: grafana-container

          image: grafana/grafana
          
          ports:
          - containerPort: 3000
          
          resources:
            # 컨테이너가 사용할수 있는 리소스의 최대치
            limits:
              cpu: "1"
              memory: "500Mi"
            # 컨테이너가 시작될때 보장받아야 하는 최소 자원
            requests:
              cpu: "0.5"
              memory: "250Mi"

---
apiVersion: v1 
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: grafana
