monitoring/order_grafana_ingress.yml
# aws nlb -> ingress controller(pod) -> ingress -> service -> pod

apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # kubernetes.io/ingress.class: nginx 
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  # tls:
  # - hosts:
  #   - grafana.inspireseop2283.shop
  #   # https 지정한 secret name과 동일한 이름
  #   secretName: grafana-inspireseop2283-shop-tls

  ingressClassName: nginx 
  rules:
    # 레코드로 등록한 도메인 이름 
  - host: grafana.inspireseop2283.shop
    http:
      paths:
        # http://server.inspireseop2283.shop/
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 80
